# aztui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  config.example.toml
.github/workflows/: release.yml  version-check.yml
docs/: architecture.md  color-scheme.md  foundation-types.md  styleguide.md  tui-wireframes.md
src/: app.rs  command.rs  errors.rs  event.rs  lib.rs  main.rs  setup.rs  update.rs
src/az/: commands.rs  executor.rs  mod.rs  parser.rs
src/cache/: disk.rs  mod.rs  store.rs
src/config/: mod.rs  settings.rs
src/domain/: activity.rs  auth.rs  cost.rs  graph.rs  mod.rs  models.rs  resources.rs  vm.rs
src/providers/: activity_provider.rs  auth_provider.rs  cost_provider.rs  graph_provider.rs  mod.rs  resource_provider.rs  vm_provider.rs
src/security/: crypto.rs  master_key.rs  mod.rs
src/ui/: fuzzy.rs  input.rs  layout.rs  mod.rs  theme.rs
src/ui/widgets/: activity_log.rs  context_switcher.rs  cost_explorer.rs  global_search.rs  hint_bar.rs  mod.rs  modal.rs  quick_switch.rs  resource_browser.rs  run_command.rs  search_input.rs  status_bar.rs
